# wgpu-profiler

./: Cargo.toml
examples/: demo.rs
src/: lib.rs
tests/: dropped_frame_handling.rs
