[package]
name = "wgpu-profiler"
version = "0.12.1"
authors = ["Andreas Reich <r_andreas2@web.de>"]
edition = "2021"
description = "Simple profiler scopes for wgpu using timer queries"
homepage = "https://github.com/Wumpf/wgpu-profiler"
repository = "https://github.com/Wumpf/wgpu-profiler"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]

[dependencies]
ulid = "1.0.0"
# wgpu = "0.16"
# wgpu = { path = "../wgpu/wgpu" }
wgpu = { git = "https://github.com/gents83/wgpu.git", rev = "9243a926dd79b96bdc82d95ac49d5feafa4f0676" }

[dev-dependencies]
winit = "0.28.6"
futures-lite = "1"
#env_logger = "0.8.2"
